--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.1.3
   path_provider: ^2.0.11
   easy_localization: ^3.0.1
+  flutter_slidable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
